<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/detail_accent_pane_background"
    android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
    android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
    android:paddingLeft="@dimen/forecast_detail_horizontal_padding"
    android:paddingStart="@dimen/forecast_detail_horizontal_padding"
    android:paddingRight="@dimen/forecast_detail_horizontal_padding"
    android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
    app:columnCount="2">

    <TextView
        android:id="@+id/detail_humidity_label_textview"
        android:fontFamily="sans-serif"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        android:gravity="center_vertical"
        app:layout_gravity="fill"
        android:text="@string/humidity"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/detail_accent_label" />

    <TextView
        android:id="@+id/detail_humidity_textview"
        android:gravity="center_vertical"
        app:layout_gravity="fill"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/white"
        tools:text="38%" />

    <TextView
        android:id="@+id/detail_pressure_label_textview"
        android:fontFamily="sans-serif"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        app:layout_gravity="fill"
        android:gravity="center_vertical"
        android:text="@string/pressure"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/detail_accent_label" />

    <TextView
        android:id="@+id/detail_pressure_textview"
        android:gravity="center_vertical"
        app:layout_gravity="fill"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/white"
        tools:text="995 hPa" />

    <TextView
        android:id="@+id/detail_wind_label_textview"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        app:layout_gravity="fill"
        android:text="@string/wind"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/detail_accent_label" />

    <TextView
        android:id="@+id/detail_wind_textview"
        android:gravity="center_vertical"
        app:layout_gravity="fill"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/white"
        tools:text="4km/h NW" />

</android.support.v7.widget.GridLayout>